--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular-material": "~0.11.4",
+    "jquery": "~2.1.4"
+  }
 }
